feat(cluster): 增加测试集群操作功能
