# api-server/api/v1/cluster/cluster.pb.validate.go
@@ -1152,6 +1152,108 @@ var _ interface {
 	ErrorName() string
 } = TestConnectionResponseValidationError{}
 
+// Validate checks the field values on TestOperatorResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *TestOperatorResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on TestOperatorResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// TestOperatorResponseMultiError, or nil if none found.
+func (m *TestOperatorResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *TestOperatorResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return TestOperatorResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// TestOperatorResponseMultiError is an error wrapping multiple validation
+// errors returned by TestOperatorResponse.ValidateAll() if the designated
+// constraints aren't met.
+type TestOperatorResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m TestOperatorResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m TestOperatorResponseMultiError) AllErrors() []error { return m }
+
+// TestOperatorResponseValidationError is the validation error returned by
+// TestOperatorResponse.Validate if the designated constraints aren't met.
+type TestOperatorResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TestOperatorResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TestOperatorResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TestOperatorResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TestOperatorResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TestOperatorResponseValidationError) ErrorName() string {
+	return "TestOperatorResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e TestOperatorResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTestOperatorResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TestOperatorResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TestOperatorResponseValidationError{}
+
 // Validate checks the field values on ResolveKubeConfigResponse_Cluster with
 // the rules defined in the proto definition for this message. If any rules
 // are violated, the first error encountered is returned, or nil if there are
