# api-server/api/v1/cluster/cluster_grpc.pb.go
@@ -27,6 +27,7 @@ const (
 	ClusterService_DeleteCluster_FullMethodName     = "/api.v1.cluster.ClusterService/DeleteCluster"
 	ClusterService_ResolveKubeConfig_FullMethodName = "/api.v1.cluster.ClusterService/ResolveKubeConfig"
 	ClusterService_TestConnection_FullMethodName    = "/api.v1.cluster.ClusterService/TestConnection"
+	ClusterService_TestOperator_FullMethodName      = "/api.v1.cluster.ClusterService/TestOperator"
 )
 
 // ClusterServiceClient is the client API for ClusterService service.
@@ -40,6 +41,7 @@ type ClusterServiceClient interface {
 	DeleteCluster(ctx context.Context, in *IdRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 	ResolveKubeConfig(ctx context.Context, in *ResolveKubeConfigRequest, opts ...grpc.CallOption) (*ResolveKubeConfigResponse, error)
 	TestConnection(ctx context.Context, in *Connection, opts ...grpc.CallOption) (*TestConnectionResponse, error)
+	TestOperator(ctx context.Context, in *Connection, opts ...grpc.CallOption) (*TestOperatorResponse, error)
 }
 
 type clusterServiceClient struct {
@@ -120,6 +122,16 @@ func (c *clusterServiceClient) TestConnection(ctx context.Context, in *Connectio
 	return out, nil
 }
 
+func (c *clusterServiceClient) TestOperator(ctx context.Context, in *Connection, opts ...grpc.CallOption) (*TestOperatorResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(TestOperatorResponse)
+	err := c.cc.Invoke(ctx, ClusterService_TestOperator_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ClusterServiceServer is the server API for ClusterService service.
 // All implementations must embed UnimplementedClusterServiceServer
 // for forward compatibility.
@@ -131,6 +143,7 @@ type ClusterServiceServer interface {
 	DeleteCluster(context.Context, *IdRequest) (*emptypb.Empty, error)
 	ResolveKubeConfig(context.Context, *ResolveKubeConfigRequest) (*ResolveKubeConfigResponse, error)
 	TestConnection(context.Context, *Connection) (*TestConnectionResponse, error)
+	TestOperator(context.Context, *Connection) (*TestOperatorResponse, error)
 	mustEmbedUnimplementedClusterServiceServer()
 }
 
@@ -161,6 +174,9 @@ func (UnimplementedClusterServiceServer) ResolveKubeConfig(context.Context, *Res
 }
 func (UnimplementedClusterServiceServer) TestConnection(context.Context, *Connection) (*TestConnectionResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method TestConnection not implemented")
+}
+func (UnimplementedClusterServiceServer) TestOperator(context.Context, *Connection) (*TestOperatorResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method TestOperator not implemented")
 }
 func (UnimplementedClusterServiceServer) mustEmbedUnimplementedClusterServiceServer() {}
 func (UnimplementedClusterServiceServer) testEmbeddedByValue()                        {}
@@ -309,6 +325,24 @@ func _ClusterService_TestConnection_Handler(srv interface{}, ctx context.Context
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ClusterService_TestOperator_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Connection)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ClusterServiceServer).TestOperator(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ClusterService_TestOperator_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ClusterServiceServer).TestOperator(ctx, req.(*Connection))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ClusterService_ServiceDesc is the grpc.ServiceDesc for ClusterService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -343,6 +377,10 @@ var ClusterService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "TestConnection",
 			Handler:    _ClusterService_TestConnection_Handler,
+		},
+		{
+			MethodName: "TestOperator",
+			Handler:    _ClusterService_TestOperator_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
